fix alignment issue with task list when overflowed

--- a/src/style/pages/_todo.scss
+++ b/src/style/pages/_todo.scss
@@ -20,7 +20,7 @@
   }
 
   &__menu {
-    flex: 0 0 40rem;
+    flex: 0 1 50rem;
     font-family: $font-family--headings;
     padding: 2rem;
     background-color: $accent-color;
@@ -80,18 +80,31 @@
 .tasks {
   flex: 0 1 100%;
   padding: 2rem;
+  padding-right: 0;
   display: grid;
   grid-template-rows: repeat(3, minmax(min-content, auto));
 
   &__list {
+    position: relative;
     max-height: 20rem;
     overflow-y: auto;
+    overflow-y: overlay;
   }
+
+  // Add padding with scrollbar
+  &__item::after {
+    content: "";
+    display: block;
+    right: 0%;
+    padding-right: 3rem;
+  }
+
   &__item {
     font-family: $font-family--headings;
     padding: 1.2rem 0;
     display: flex;
     align-items: center;
+    position: relative;
 
     &__info {
       margin-left: 1.2rem;
